--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,22 +1,36 @@
 name: MiniFontConverter
 version: '${project.version}'
-main: me.goldmember33.converter.MiniFontConverterPlugin
+main: com.github.goldmember33.converter.MiniFontConverterPlugin
 api-version: '1.20'
 prefix: MiniFontConverter
 load: STARTUP
-authors: [ GoldMember33 ]
+author: GoldMember33
+website: https://github.com/GoldMember33/MiniFontConverter
 description: Um plugin que converte mensagens para MiniFont estilizado e permite a conversão automática de mensagens do chat.
 
 commands:
   minifontconverter:
     description: Converte sua mensagem para MiniFont estilizado.
+    permission: minifontconverter.convert.use
+    aliases: [ "mfc" ]
   minifontchatoggle:
     description: Ativa ou desativa a conversão automática de mensagens para MiniFont.
+    permission: minifontconverter.convert.chat.use
+    aliases: [ "mftoggle", "minifontchat" ]
   minifontreload:
     description: Recarrega o plugin de MiniFont.
+    permission: minifontconverter.reload
     aliases: [ "mfreload" ]
 
 permissions:
+  minifontconverter.*:
+    description: Permissão para poder utilizar todos os comandos do MiniFontConverter
+    default: op
+    children:
+      minifontconverter.convert.use: true
+      minifontconverter.convert.chat.use: true
+      minifontconverter.reload: true
+
   minifontconverter.convert.use:
     description: Permissão para usar o comando /minifontconverter
     default: op
